# multi-agent-orchestration

./: .gitignore  README.md  pyproject.toml
claude_agents/: agents.py  build_orchestrator.py  config.py  main.py  orchestrator.py  pr_creator.py  prompts.py  team_orchestrator.py  tools.py
