[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agents"
version = "0.1.0"
description = "Multi-agent system for software engineering workflows"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "anyio",
    "prompt_toolkit",
]

[project.scripts]
claude-agents = "claude_agents.main:run"
ca = "claude_agents.main:run"
